2006-08-30  Don Scorgie  <don@Madaline>

	* src/yelp-io-channel.c: 
	Don't double free bzip streams
	
2006-08-30  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-search-pager.c: 
	Move online url to perminant address at gnome.org

2006-08-28  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-io-channel.c:
	Supress critical warning when it isn't actually 
	critical

	* src/yelp-info-parser.c:
	* src/yelp-io-channel.c:
	Don't fall over when part of the info file
	goes missing (bug #353209)

2006-08-16  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-search-pager.c: 
	Fix crash when apropos goes nuts (bug #347467)
	Patch from Priit Laes

2006-08-10  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-info-parser.c: 
	Fix stupid crash on CVS info file caused by
	fake *Notes, trying to trick yelp into making 
	them hyperlinks when they shouldn't be
	
==================== 2.15.91 ====================
2006-08-07  Don Scorgie  <dscorgie@cvs.gnome.org>

	* NEWS:
	* configure.in:
	- Version 2.15.91

	* src/yelp-search-pager.c: 
	Remove translation of online URL in anticipation of a
	new script to do the redirection

2006-08-05  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-pager.c: 
	* src/yelp-toc-pager.c: 
	* src/yelp-window.c: 
	* src/yelp-search-pager.c: 
	Various misc. cleanups.
	- Keep track of idle functions and callbacks
	- don't use depreciated gtk_idle_add function
	Based on patch from Christian Persch
	
	* src/yelp-main.c: 
	Initialise dbus threading before gnome-vfs.  Bug #350079
	
2006-07-25  Shaun McCance  <shaunm@gnome.org>

	* data/toc.xml.in:
	- Changed "Sound & Vision" to "Sound & Video"

2006-07-25  Don Scorgie  <dscorgie@cvs.gnome.org>

	* stylesheets/search2html.xsl: 
        Remove fixed font sizes from search results
        Remove fixed colours from search results
	Fixes bug #348563 and makes page respect
	theme setting
	

==================== 2.15.5 ====================

2006-07-24  Don Scorgie <dscorgie@cvs.gnome.org>

	* NEWS: